# Auto-Test-System

./: .gitignore  LICENSE  README  README.md  commit.template
easy-rsa/Windows/: build-req.bat  build-ta.bat  sign-req.bat  vars.bat.sample
endpoint/: config.yml  pyproject.toml  task_daemon.py
endpoint/data/Linux/: client.conf  server.conf
endpoint/test_endpoint/: app.py  async_remote_library.py  bundle.py  bundler.py  daemon.py  install.py  main.py  test_library.py  update.py  venv_run.py
endpoint/workspace/: config.yml  pyproject.toml
example-test-scripts/: README.md
example-test-scripts/robot_backing_scripts/: demotest.py  iperftest.py  pingtest.py
example-test-scripts/robot_backing_scripts/customtestlibs/: database.py  device_test.py
example-test-scripts/robot_tester_scripts/: config.robot  demo-test.md  demo-test.robot  wifi-basic-test.md
robot-test-endpoint/: Pipfile  README.md  config.yml  daemon.py  openvpn.py  pyproject.toml  task_daemon.py
robot-test-endpoint/data/: profile-template.xml
robot-test-endpoint/data/Windows/: client.ovpn  server.ovpn
robot-test-endpoint/easy-rsa/Windows/: build-req.bat
robot-test-runner/: Pipfile  README.md
robot-test-runner/example_scripts/robot_backing_scripts/customtestlibs/: device_test.py  wifi_test.py
robot-test-runner/example_scripts/robot_backing_scripts/customtestlibs/routers/: huawei.py  router_base.py
robot-test-runner/example_scripts/robot_tester_scripts/: demo-test.md
robot-test-runner/patch/: patch.py  robot.diff
robot-test-runner/tools/: Test.py  database.py  runTest.py
robotclient/: Pipfile  agent.py  config.yml  daemon.py  iperftest.py  log.txt  pingtest.py  requirements.txt
robotserver/: requirements.txt
robotserver/iperf-test/: mykeywords.robot  wifi-basic-test.md  wifi-basic-test.robot
robotserver/robot_python_scripts/: crawlertest.py  demotest.py  iperftest.py
robotserver/robot_python_scripts/customtestlibs/: database.py  database_client.py  wifi_test.py  winwifi.py
robotserver/robot_scripts/: demo-test.md  demo-test.robot  wifi-basic-test.md  wifi-basic-test.robot  wifi-crawler-test.md  wifi-iperf-test.md  wifi-performance-test.md  wifi-softap-basic-test.md  wifi-softap-perfomance-test.md  wifi_compatibility.md
robotserver/robot_scripts/demo/: demo-test.robot
robotserver/robot_scripts/wifi-basic-test/: config.robot  wifi-basic-test.md
robotserver/robot_scripts/wifi-iperf-test/: wifi-iperf-test.md
robotserver/scripts/: crawlertest.py  iperftest.py  pingtest.py
robotserver/scripts/customtestlibs/: database_client.py  device_test.py  wifi_test.py
robotserver/tools/: Test.py  getTest.py  runTest.py
robotserver/wifi-basic-test/: wifi-basic-test.md  wifi-basic-test.robot  wifi-crawler-test.md
robotserver/wifi-iperf-test/: config.robot  wifi-iperf-test.md
sample-scripts/demo_test/: README.md  setup.py
sample-scripts/demo_test/src/demo_test/: demotest.py
sample-scripts/robot_backing_scripts/customtestlibs/: rest_api.py  wifi_test.py
sample-scripts/robot_tester_scripts/: setup.robot
sample-scripts/robotest_utilities/: README.md  setup.py
sample-scripts/robotest_utilities/src/robotest_utilities/: download_fw.py  server_api.py  utilities.py
sample-scripts/wifi_basic_test/: README.md  setup.py
sample-scripts/wifi_basic_test/src/wifi_basic_test/: __init__.py  base_wifi_dut.py  iperftest.py  pingtest.py  wifi_dut.py
webrobot/: Pipfile  manage.py  pyproject.toml
webrobot/app/: __init__.py
webrobot/app/main/: __init__.py  config.py
webrobot/app/main/controller/: auth_controller.py  cert_controller.py  endpoint_controller.py  organization_controller.py  script_controller.py  socketio_controller.py  task_controller.py  taskqueue_controller.py  taskresource_controller.py  team_controller.py  test_controller.py  testresult_controller.py  teststore_controller.py  user_controller.py
webrobot/app/main/model/: database.py  user.py
webrobot/app/main/service/: auth_helper.py  blacklist_service.py  user_service.py
webrobot/app/main/util/: __init__.py  decorator.py  dto.py  errors.py  get_path.py  identicon.py  request_parse.py  response.py  tarball.py
webrobot/task-runner/: runner.py
webrobot/task-runner/patch/: apply.py
webrobot/task-runner/util/: dbhelper.py  notification.py  run_test.py
webrobot/task_runner/: runner.py
webrobot/task_runner/patch/: robot.diff
webrobot/task_runner/util/: dbhelper.py  notification.py
webrobot/templates/: test_result.html
webserver/: .env.example  .eslintrc  ember.py  manage.py  package.json  pyproject.toml
webserver/app/: __init__.py  __main__.py
webserver/app/main/: __init__.py  config.py
webserver/app/main/controller/: auth_controller.py  cert_controller.py  document_controller.py  endpoint_controller.py  organization_controller.py  pypi_controller.py  script_controller.py  setting_controller.py  socketio_controller.py  task_controller.py  taskresource_controller.py  team_controller.py  test_controller.py  testresult_controller.py  teststore_controller.py  user_controller.py
webserver/app/main/model/: database.py
webserver/app/main/service/: auth_helper.py  blacklist_service.py  user_service.py
webserver/app/main/templates/: pypi.html
webserver/app/main/util/: __init__.py  decorator.py  dto.py  eventqueue.py  get_path.py  identicon.py  response.py  tarball.py  tempdir.py  zipfile.py
webserver/app/test/: base.py  test_auth.py  test_config.py  test_user_model.py
webserver/src/api/controllers/: script.controller.js  task.controller.js  taskQueue.controller.js
webserver/src/api/models/: task.model.js  taskQueue.model.js  test.model.js
webserver/src/api/routes/scripts/: index.js
webserver/src/api/routes/taskQueues/: index.js
webserver/src/api/routes/tasks/: index.js
webserver/src/config/: express.js
webserver/static/download/: template.get-endpoint.py  template.get-poetry.py
webserver/task_runner/: runner.py
webserver/task_runner/patch/: apply.py  robot.diff
webserver/task_runner/util/: dbhelper.py  md2robot.py  notification.py  run_test.py  xmlrpcserver.py
(+7 files in other folders)
