[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "test-endpoint"
version = "0.0.1"
description = "A distributed test endpoint to perform the actual test jobs"
authors = [ "panzi <panzilla@163.com>",]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "2.20.1"
bson = "0.5.8"
watchdog = "0.10.2"
websocket-rpc = "^0.0.5"
toml = "^0.10.0"

[tool.poetry.scripts]
daemon = "test_endpoint.main:run"
bundle = "test_endpoint.bundle:run"

[tool.robotest.settings]
server_host = "127.0.0.1"
server_port = "5000"
join_id = ""
uuid = ""
