[tool.poetry]
name = "robot-test-endpoint"
version = "0.1.0"
description = ""
authors = ["panzi <panzilla@163.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
netifaces = "0.10.7"
pyserial = "3.4"
requests = "2.20.1"
robotremoteserver = "1.1"
ruamel-yaml = "0.15.89"
python-daemon = "2.2.3"
bson = "0.5.8"
pexpect = "4.7.0"
watchdog = "0.10.2"

[tool.poetry.dev-dependencies]
taskipy = "^1.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.taskipy.tasks]
daemon = "python task_daemon.py"

