[tool.poetry]
name = "Auto-Test-System"
version = "0.1.0"
description = ""
authors = ["panzi <panzilla@163.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aniso8601 = "1.3.0"
bcrypt = "3.1.4"
click = "6.7"
coverage = "4.4.2"
enum-compat = "0.0.2"
eventlet = "0.21.0"
flask = "1.1.1"
flask-cors = "3.0.7"
Flask-Bcrypt = "0.7.1"
Flask-Script = "2.0.6"
Flask-SocketIO = "2.9.3"
Flask-Testing = "0.7.1"
gem = "0.1.12"
gunicorn = "19.7.1"
pycparser = "2.18"
python-engineio = "2.0.2"
python-socketio = "1.8.4"
PyJWT = "1.5.3"
mongoengine = "0.17.0"
mistune = "0.8.4"
robotframework = "3.1.1"
pexpect = "4.7.0"
wheel = "^0.34.2"
pillow = "^7.0.0"
Flask-restx = "^0.2.0"

[tool.poetry.dev-dependencies]
taskipy = "^1.2.0"

[tool.taskipy.tasks]
server = "python manage.py run"
test = "python manage.py test"
patch = "python task_runner/patch/apply.py"
genkey = "python ../tools/easy-rsa/genKey.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

