[tool.poetry]
name = "Ember"
version = "0.1.0"
description = ""
authors = ["panzi <panzilla@163.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp-xmlrpc = "^1.3.0"
aniso8601 = "1.3.0"
async-files = "^0.3"
async-property = "^0.2.1"
bcrypt = "3.1.4"
click = "6.7"
coverage = "4.4.2"
chardet = "^3.0.4"
enum-compat = "0.0.2"
gem = "0.1.12"
gunicorn = "19.7.1"
mistune = "0.8.4"
motor = "^2.3.0"
pycparser = "2.18"
PyJWT = "1.5.3"
python-socketio = "^5.0.4"
Pillow = "^8.0.1"
robotframework = "^3.2.2"
robotframework-excel = "^1.0.0-beta.4"
sanic = "^20.9.1"
sanic_openapi = "^0.6.1"
sanic-limiter = "^0.1.3"
Sanic-Cors = "^0.10.0"
simple-bcrypt = "^0.1.0"
umongo = {extras = ["motor"], version = "^2.3.0"}
websocket-rpc = "^0.0.6"
wheel = "^0.36.0"

[tool.poetry.dev-dependencies]
taskipy = "^1.5.1"
poetry = "^1.1.4"

[tool.taskipy.tasks]
server = "python app/__init__.py"
patch = "python task_runner/patch/apply.py"

[tool.poetry.scripts]
app = "ember:run"
test = "ember:test"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

