[tool.poetry]
name = "endpoint-workspace"
version = "0.0.1"
description = "Workspace that a virtual environment poetry will create for"
authors = ["panzi <panzilla@163.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
netifaces = "0.10.7"
pyserial = "3.4"
requests = "2.20.1"
pexpect = "4.7.0"
"ruamel.yaml" = "^0.16.10"
selenium = "^3.141.0"
pyvirtualdisplay = "^0.2.5"
chardet = "^3.0.4"
cffi = "^1.14.2"
wheel = "^0.35.1"
aioserial = "^1.3.0"
pyocd = "^0.28.3"
WMI = "^1.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
